== Unreleased

== Version 12.0.0
- Update API version with 2022-04 release, remove API version 2021-07 ([#591](https://github.com/Shopify/shopify_python_api/pull/591))

== Version 11.0.0
- Update API version with 2022-04 release
- remove API version 2020-10, 2021-01, 2021-04 as they are all unsupported as of 2022-04

== Version 10.0.0
- Update API version with 2022-01 release, remove API version 2020-07

== Version 9.0.0

- Drop Python 2 support ([#549](https://github.com/Shopify/shopify_python_api/pull/549))
- Update API version with 2021-10 release, remove API version 2020-04 ([#548](https://github.com/Shopify/shopify_python_api/pull/548))

== Version 8.4.2
- Update API version with 2021-07 release, remove API version 2020-01 ([#521](https://github.com/Shopify/shopify_python_api/pull/521))

== Version 8.4.1
- Bug fix: `sanitize_shop_domain` now returns `None` rather than `'none.myshopify.com'` if no `shop_domain` arg is passed in ([#499](https://github.com/Shopify/shopify_python_api/pull/499))

== Version 8.4.0
- Revert Feature #441 Dynamic API Versioning ([#495](https://github.com/Shopify/shopify_python_api/pull/495))

== Version 8.3.1
- Fix bug: Add the `shopify/utils` sub-package when building the source distribution ([#493](https://github.com/Shopify/shopify_python_api/pull/493))

== Version 8.3.0
- Add support for [session tokens](https://shopify.dev/concepts/apps/building-embedded-apps-using-session-tokens) ([#479](https://github.com/Shopify/shopify_python_api/pull/479))
  - Use `session_token.decode_from_header` to obtain a decoded session token from an HTTP Authorization header
- Create a `utils` sub-package with a `shop_url` utility file ([#483](https://github.com/Shopify/shopify_python_api/pull/483))
  - Use `shop_url.sanitize_shop_domain()` to sanitize shop names given as input
- Introduce the `ApiAccess` class to handle access scopes operations for apps
  - `Session` class now store access_scopes attributes as `ApiAccess` objects