@@ -1,4 +1,5 @@
 == Unreleased
+- Fix: Accept 10 seconds clock skew to avoid `ImmatureSignatureError`
 
 == Version 12.0.0
 - Update API version with 2022-04 release, remove API version 2021-07 ([#591](https://github.com/Shopify/shopify_python_api/pull/591))
